Fixed .item p text-alignment

--- a/style.css
+++ b/style.css
@@ -113,6 +113,7 @@ a {
 .item p { 
     flex-grow: 2;
     max-width: 250px;
+    text-align: center;
 }
 
 .container2 h3 {
